bug: corrigido overflow-x

--- a/css/reset.css
+++ b/css/reset.css
@@ -7,6 +7,7 @@
     text-decoration: none;
     font-family: "Raleway", sans-serif;
     color: #fff;
+    overflow-x: hidden;
 }
 html,body{
     width: 100vw;
